--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -2,7 +2,6 @@ keep-open
 no-input-default-bindings
 
 profile=gpu-hq
-video-sync=display-resample
 volume-max=100
 
 cache=yes
@@ -16,7 +15,7 @@ slang=eng,en,fre,fr
 screenshot-format=jpeg
 screenshot-jpeg-quality=100
 screenshot-template=mpv-%F-%P-%03n
-screenshot-directory=~/Pictures/creenshots
+screenshot-directory=~/Pictures/screenshots
 
 script-opts=osc-hidetimeout=1500
 script-opts=ytdl_hook-ytdl_path=yt-dlp
